lab1/Test/L1-A-12-51.output
Error Type B at Line 1
Error Type A at Line 3
Error Type A at Line 6
Error Type B at Line 7
Error Type A at Line 9
Error Type B at Line 12
Error Type A at Line 14
Error Type B at Line 14
Error Type B at Line 31
